# tinyJson

./: .gitignore  BUILD.md  CMakeLists.txt  DESCRIPTION.md  README.md
src/: tinyJSON.cpp  tinyJSON.h
